[chore] dependency updates.

--- a/classroom/src/app/about/about.component.html
+++ b/classroom/src/app/about/about.component.html
@@ -1,11 +1,13 @@
-<h1 mat-dialog-title class="header">About {{ title }} &#64; {{ institution }}</h1>
+<h1 mat-dialog-title class="header">
+  About {{ title }} &#64; {{ institution }}
+</h1>
 <div mat-dialog-content>
   <article>
     <section>
       <h1>{{ title }} &#64; {{ institution }} v{{ version }}</h1>
       <p>
-        <dfn>{{ title }} &#64; {{ institution }}</dfn> is a university-wide resource
-        for writing education. It is an interactive text analysis and
+        <dfn>{{ title }} &#64; {{ institution }}</dfn> is a university-wide
+        resource for writing education. It is an interactive text analysis and
         visualization environment that supports writing instruction in
         foundational writing courses and upper-level discipline specific courses
         at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
