--- a/classroom/src/app/frequency-graph/frequency-graph.component.html
+++ b/classroom/src/app/frequency-graph/frequency-graph.component.html
@@ -4,32 +4,51 @@
   <!-- label(category.id)-->
   <!-- </mat-card-title> -->
   <mat-card-content>
-    <mat-table *ngIf="ranking" matSort #rankSort="matSort" matSortDisableClear [dataSource]="ranking"
-      [style.width]="'500px'">
+    <mat-table
+      *ngIf="ranking"
+      matSort
+      #rankSort="matSort"
+      matSortDisableClear
+      [dataSource]="ranking"
+      [style.width]="'500px'"
+    >
       <ng-container matColumnDef="position">
         <mat-header-cell *matHeaderCellDef mat-sort-header class="rank">
           Rank
         </mat-header-cell>
-        <mat-cell *matCellDef="let element; let rowIndex = index" class="rank">{{ rowIndex + 1 }}</mat-cell>
+        <mat-cell
+          *matCellDef="let element; let rowIndex = index"
+          class="rank"
+          >{{ rowIndex + 1 }}</mat-cell
+        >
       </ng-container>
       <ng-container matColumnDef="title">
         <mat-header-cell *matHeaderCellDef mat-sort-header class="name">
           Name
         </mat-header-cell>
         <mat-cell *matCellDef="let element" class="name">
-          <a [ngClass]="{
+          <a
+            [ngClass]="{
               student_col: true,
               model_entry: element.ownedby === 'instructor'
-            }" (click)="open(element.id)">
+            }"
+            (click)="open(element.id)"
+          >
             {{ element.title }}
           </a>
         </mat-cell>
       </ng-container>
       <ng-container matColumnDef="value">
-        <mat-header-cell *matHeaderCellDef mat-sort-header start="desc" class="value">Value</mat-header-cell>
+        <mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          start="desc"
+          class="value"
+          >Value</mat-header-cell
+        >
         <mat-cell *matCellDef="let element" class="value">{{
           element.value.toFixed(2)
-          }}</mat-cell>
+        }}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="meter">
         <mat-header-cell *matHeaderCellDef></mat-header-cell>
@@ -41,16 +60,37 @@
       </ng-container>
       <ng-container matColumnDef="bar">
         <mat-header-cell *matHeaderCellDef class="bar">
-          <svg xmlns="http://www.w3.org/2000/svg" [style.width]="options.width + 'px'"
-            [style.height]="options.height + 'px'">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            [style.width]="options.width + 'px'"
+            [style.height]="options.height + 'px'"
+          >
             <desc>
               Linear scale ruler from 0 to
               {{ x.tickFormat(10)(x.ticks(10)[10]) }}.
             </desc>
-            <g fill="none" font-size="9" font-family="sans-serif" font-weight="normal" text-anchor="middle">
-              <line stroke="currentColor" [attr.x1]="x(0)" [attr.x2]="x(max_value)" [attr.y1]="17" [attr.y2]="17" />
+            <g
+              fill="none"
+              font-size="9"
+              font-family="sans-serif"
+              font-weight="normal"
+              text-anchor="middle"
+            >
+              <line
+                stroke="currentColor"
+                [attr.x1]="x(0)"
+                [attr.x2]="x(max_value)"
+                [attr.y1]="17"
+                [attr.y2]="17"
+              />
               <g class="tick" *ngFor="let tick of x.ticks(10); index as i">
-                <line stroke="currentColor" [attr.x1]="x(tick)" [attr.x2]="x(tick)" y1="12" y2="17" />
+                <line
+                  stroke="currentColor"
+                  [attr.x1]="x(tick)"
+                  [attr.x2]="x(tick)"
+                  y1="12"
+                  y2="17"
+                />
                 <text [attr.x]="x(tick)" [attr.y]="11" fill="currentColor">
                   {{ x.tickFormat(10)(tick) }}
                 </text>
@@ -59,31 +99,63 @@
           </svg>
         </mat-header-cell>
         <mat-cell *matCellDef="let element" class="bar">
-          <svg [attr.width]="options.width + 'px'" [attr.height]="options.height + 'px'"
-            [attr.data-value]="getValue(element)">
+          <svg
+            [attr.width]="options.width + 'px'"
+            [attr.height]="options.height + 'px'"
+            [attr.data-value]="getValue(element)"
+          >
             <desc>A bar representing a value of {{ getValue(element) }}</desc>
-            <rect [attr.x]="left" [attr.y]="options.margins.top" [attr.height]="
+            <rect
+              [attr.x]="left"
+              [attr.y]="options.margins.top"
+              [attr.height]="
                 options.height - (options.margins.top + options.margins.bottom)
-              " [attr.width]="x(getValue(element)) - left" [attr.fill]="
+              "
+              [attr.width]="x(getValue(element)) - left"
+              [attr.fill]="
                 element.ownedby === 'instructor'
                   ? 'rgba(0,0,255,.4)'
                   : '#EEEEEEEE'
-              " [attr.stroke]="'#3C3C3C'" [attr.stroke-width]="1" />
+              "
+              [attr.stroke]="'#3C3C3C'"
+              [attr.stroke-width]="1"
+            />
           </svg>
         </mat-cell>
       </ng-container>
       <ng-container matColumnDef="meanbar">
         <mat-header-cell *matHeaderCellDef class="bar">
-          <svg xmlns="http://www.w3.org/2000/svg" [style.width]="options.width + 'px'"
-            [style.height]="options.height + 'px'">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            [style.width]="options.width + 'px'"
+            [style.height]="options.height + 'px'"
+          >
             <desc>
               Linear scale ruler from 0 to
               {{ x.tickFormat(10)(x.ticks(10)[10]) }}.
             </desc>
-            <g fill="none" font-size="9" font-family="sans-serif" font-weight="normal" text-anchor="middle">
-              <line stroke="currentColor" [attr.x1]="left" [attr.x2]="right" [attr.y1]="17" [attr.y2]="17" />
+            <g
+              fill="none"
+              font-size="9"
+              font-family="sans-serif"
+              font-weight="normal"
+              text-anchor="middle"
+            >
+              <line
+                stroke="currentColor"
+                [attr.x1]="left"
+                [attr.x2]="right"
+                [attr.y1]="17"
+                [attr.y2]="17"
+              />
               <g class="tick" *ngFor="let tick of x.ticks(10); index as i">
-                <line stroke="currentColor" [attr.x1]="x(tick)" [attr.x2]="x(tick)" y1="12" y2="17" />
+                <line
+                  stroke="currentColor"
+                  [attr.x1]="x(tick)"
+                  [attr.x2]="x(tick)"
+                  y1="12"
+                  y2="17"
+                />
                 <text [attr.x]="x(tick)" [attr.y]="11" fill="currentColor">
                   {{ x.tickFormat(10)(tick) }}
                 </text>
@@ -93,24 +165,43 @@
         </mat-header-cell>
         <mat-cell *matCellDef="let element" class="bar">
           <div [matTooltip]="bar_tip(getValue(element))">
-            <svg [attr.width]="options.width + 'px'" [attr.height]="options.height + 'px'"
-              [attr.data-value]="getValue(element)">
+            <svg
+              [attr.width]="options.width + 'px'"
+              [attr.height]="options.height + 'px'"
+              [attr.data-value]="getValue(element)"
+            >
               <desc>A bar that shows {{ bar_tip(getValue(element)) }}</desc>
-              <line [attr.x1]="x(median)" [attr.x2]="x(median)" [attr.y1]="0" [attr.y2]="'100%'"
-                [style.stroke]="'black'" [style.stroke-width]="'1px'" />
-              <rect [attr.x]="x(mean_start(getValue(element)))" [attr.y]="options.margins.top" [attr.height]="
+              <line
+                [attr.x1]="x(median)"
+                [attr.x2]="x(median)"
+                [attr.y1]="0"
+                [attr.y2]="'100%'"
+                [style.stroke]="'black'"
+                [style.stroke-width]="'1px'"
+              />
+              <rect
+                [attr.x]="x(mean_start(getValue(element)))"
+                [attr.y]="options.margins.top"
+                [attr.height]="
                   options.height -
                   (options.margins.top + options.margins.bottom)
-                " [attr.width]="x(mean_width(getValue(element))) - x(0)" [attr.fill]="
+                "
+                [attr.width]="x(mean_width(getValue(element))) - x(0)"
+                [attr.fill]="
                   element.ownedby === 'instructor'
                     ? 'rgba(0,0,255,.4)'
                     : '#EEEEEEEE'
-                " [attr.stroke]="'#3C3C3C'" [attr.stroke-width]="1" />
+                "
+                [attr.stroke]="'#3C3C3C'"
+                [attr.stroke-width]="1"
+              />
             </svg>
           </div>
         </mat-cell>
       </ng-container>
-      <mat-header-row *matHeaderRowDef="displayedColumns; sticky: sticky"></mat-header-row>
+      <mat-header-row
+        *matHeaderRowDef="displayedColumns; sticky: sticky"
+      ></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
   </mat-card-content>
